# docxfill

./: README.md  example.py  pyproject.toml
.github/workflows/: publish.yml  test.yml
tests/: input.docx
