[project]
name = "docxfill"
version = "0.1.0"
description = "Fill text and images into .docx files from placeholders."
readme = "README.md"                      # Đảm bảo có file README.md
requires-python = ">=3.7"                 # Giới hạn phiên bản Python (bạn chỉnh nếu cần)
authors = [
    { name = "ThuyHangNguyen", email = "littlenysvcs@gmail.com" }
]
license = { text = "MIT" }                # Cách khai báo license chuẩn hơn
dependencies = [
    "python-docx",
    "openpyxl",
]

[project.urls]
Source = "https://github.com/ThuyHangNguyen/docxfill"   # Thay bằng link GitHub chính xác
Bug Tracker = "https://github.com/ThuyHangNguyen/docxfill/issues"
Documentation = "https://github.com/ThuyHangNguyen/docxfill#readme"

[project.optional-dependencies]
testing = ["pytest"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
